--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
                     <h4 class="parametro-senha__titulo">Número de caracteres</h4>
 
 <div class="parametro-senha-botoes">
-    <button>-</button>
-    <p>12</p>
-    <button>+</button>
+    <button class="parametro-senha__botao">-</button>
+    <p class="parametro-senha__texto">12</p>
+    <button class="parametro-senha__botao">+</button>
 </div>
 
                 </div>                
